<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_insert_bold"
        android:icon="@drawable/ic_bold"
        android:title="@string/action_insert_bold_text"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_insert_italics"
        android:icon="@drawable/ic_italics"
        android:title="@string/action_insert_italics"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_insert_strikethrough"
        android:icon="@drawable/ic_strikethrough"
        android:title="@string/action_insert_strikethrough"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_insert_heading"
        android:icon="@drawable/ic_header"
        android:title="@string/action_insert_heading"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_insert_quote"
        android:icon="@drawable/ic_quote"
        android:title="@string/action_insert_quote"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_insert_code"
        android:icon="@drawable/ic_code"
        android:title="@string/action_insert_code"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_insert_link"
        android:icon="@drawable/ic_link"
        android:title="@string/action_insert_link"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_insert_table"
        android:icon="@drawable/ic_table"
        android:title="@string/action_insert_table"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_insert_image"
        android:icon="@drawable/ic_photo"
        android:title="@string/action_insert_image"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_toggle_check_line"
        android:icon="@drawable/ic_box_checked_outline"
        android:title=""
        app:showAsAction="always" />

    <item
        android:id="@+id/action_scroll_to_top"
        android:icon="@drawable/ic_up"
        android:title=""
        app:showAsAction="always" />
    <item
        android:id="@+id/action_scroll_to_bottom"
        android:icon="@drawable/ic_down"
        android:title=""
        app:showAsAction="always" />
    <item
        android:id="@+id/action_undo"
        android:enabled="false"
        android:icon="@drawable/ic_undo"
        android:title=""
        app:showAsAction="always" />
    <item
        android:id="@+id/action_redo"
        android:enabled="false"
        android:icon="@drawable/ic_redo"
        android:title=""
        app:showAsAction="always" />
</menu>